--- a/app/src/main/res/layout/content_artist_details.xml
+++ b/app/src/main/res/layout/content_artist_details.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:showIn="@layout/activity_artist_info"
         tools:context="lol.azaza.artists.ArtistDetailActivity">
@@ -46,7 +46,7 @@
                 android:layout_marginBottom="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Биография"
+                android:text="@string/bio"
                 android:textSize="28sp" />
 
             <TextView
