Немного улучшил лэйауты. Заюзал адаптер для курсора.

--- a/app/src/main/res/layout/content_artist_details.xml
+++ b/app/src/main/res/layout/content_artist_details.xml
@@ -47,7 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/bio"
-                android:textSize="28sp" />
+                android:textSize="28sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/artist_description"
