Теперь вытянутые картинки скейлятся нормально.

--- a/app/src/main/res/layout-land/content_artist_details.xml
+++ b/app/src/main/res/layout-land/content_artist_details.xml
@@ -10,13 +10,13 @@
         android:id="@+id/cover"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:maxWidth="200dp" />
+        android:scaleType="fitStart"
+        android:adjustViewBounds="true" />
 
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minWidth="500dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="vertical"
