--- a/app/src/main/res/layout/content_artists_list.xml
+++ b/app/src/main/res/layout/content_artists_list.xml
@@ -42,4 +42,27 @@
             android:layout_height="wrap_content"
             android:text="@string/try_again" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/hint_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/swipe_to_refresh"
+            android:textAlignment="center"
+            android:layout_marginBottom="20dp"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:src="@drawable/ic_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </FrameLayout>
