--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -20,21 +20,18 @@
             android:id="@+id/artist_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:text="Artist name" />
+            android:textSize="@dimen/text_regular"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/artist_genres"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Deathcore" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/artist_info"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="2 songs" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </FrameLayout>
