--- a/app/src/main/res/layout/content_artists_list.xml
+++ b/app/src/main/res/layout/content_artists_list.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="@string/error"
             android:layout_marginBottom="20dp"
-            android:textSize="20sp" />
+            android:textSize="@dimen/text_medium" />
 
         <Button
             android:id="@+id/try_again_button"
@@ -57,7 +57,7 @@
             android:text="@string/swipe_to_refresh"
             android:textAlignment="center"
             android:layout_marginBottom="20dp"
-            android:textSize="20sp" />
+            android:textSize="@dimen/text_medium" />
 
         <ImageView
             android:src="@drawable/ic_arrow"
