--- a/app/src/main/res/layout/content_artists_list.xml
+++ b/app/src/main/res/layout/content_artists_list.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/swipe_to_refresh"
-            android:textAlignment="center"
+            android:gravity="center"
             android:layout_marginBottom="20dp"
             android:textSize="@dimen/text_medium" />
 
